airflow/logs/scheduler/2022-10-28/teste_dag.py.log
[2022-10-28T00:55:33.116+0000] {processor.py:154} INFO - Started process (PID=4640) to work on /home/marcelohenriqueleite35/carteira_ativos/airflow/dags/teste_dag.py
[2022-10-28T00:55:33.118+0000] {processor.py:756} INFO - Processing file /home/marcelohenriqueleite35/carteira_ativos/airflow/dags/teste_dag.py for tasks to queue
[2022-10-28T00:55:33.119+0000] {logging_mixin.py:120} INFO - [2022-10-28T00:55:33.119+0000] {dagbag.py:537} INFO - Filling up the DagBag from /home/marcelohenriqueleite35/carteira_ativos/airflow/dags/teste_dag.py
[2022-10-28T00:55:33.124+0000] {logging_mixin.py:120} INFO - [2022-10-28T00:55:33.122+0000] {dagbag.py:342} ERROR - Failed to import: /home/marcelohenriqueleite35/carteira_ativos/airflow/dags/teste_dag.py
Traceback (most recent call last):
  File "/home/marcelohenriqueleite35/carteira_ativos/env/lib/python3.9/site-packages/airflow/models/dagbag.py", line 338, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 786, in exec_module
  File "<frozen importlib._bootstrap_external>", line 923, in get_code
  File "<frozen importlib._bootstrap_external>", line 853, in source_to_code
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "/home/marcelohenriqueleite35/carteira_ativos/airflow/dags/teste_dag.py", line 9
    from 
         ^
SyntaxError: invalid syntax
[2022-10-28T00:55:33.124+0000] {processor.py:768} WARNING - No viable dags retrieved from /home/marcelohenriqueleite35/carteira_ativos/airflow/dags/teste_dag.py
[2022-10-28T00:55:33.154+0000] {processor.py:176} INFO - Processing /home/marcelohenriqueleite35/carteira_ativos/airflow/dags/teste_dag.py took 0.043 seconds
